# AeronTensorPool.jl

./: .gitignore  AGENTS.md  Project.toml  README.md
.github/workflows/: ci.yml
apps/: tp_driver.jl  tp_tool.jl
bench/: README.md  benchmarks.jl  system_bench.jl
c/: CMakeLists.txt
c/examples/: tp_attach_example.c  tp_consumer_example.c  tp_consumer_progress_example.c  tp_consumer_rate_limit_example.c  tp_detach_example.c  tp_discovery_example.c  tp_invoker_example.c  tp_producer_example.c  tp_qos_monitor_example.c  tp_reattach_example.c
c/include/: tensorpool_client.h  tensorpool_errors.h  tensorpool_types.h
c/schemas/: driver-schema.xml
c/src/: tp_attach.c  tp_client.c  tp_consumer.c  tp_context.c  tp_detach.c  tp_discovery.c  tp_driver_control.c  tp_errors.c  tp_internal.h  tp_keepalive.c  tp_metadata.c  tp_producer.c  tp_qos.c  tp_shm.c
c/tests/: tp_accessors_test.c  tp_attach_backoff_test.c  tp_attach_required_fields_test.c  tp_attach_validate_test.c  tp_consumer_empty_payload_test.c  tp_control_progress_test.c  tp_control_schema_gating_test.c  tp_discovery_gating_test.c  tp_discovery_test.c  tp_epoch_remap_test.c  tp_getters_not_found_test.c  tp_integration_detach.c  tp_integration_smoke.c  tp_lease_revoke_reattach_test.c  tp_metadata_api_test.c  tp_metadata_test.c  tp_per_consumer_streams_test.c  tp_qos_test.c  tp_seqlock_drop_test.c  tp_shm_uri_test.c  tp_shm_validate_test.c  tp_shm_validation_fallback_test.c  tp_superblock_test.c
config/: bridge_chain_a_example.toml  bridge_chain_b_example.toml  bridge_config_example.toml  defaults.toml  driver_camera_example.toml  driver_integration_example.toml  driver_interop_example.toml  interop_env_example.toml  rate_limiter_config_example.toml  rate_limiter_example.toml
docs/: AERON_CALLBACKS_ASYNC_REVIEW.md  ALTERNATIVES.md  API_EXPORTS.md  API_REDESIGN_PROPOSAL.md  API_STRINGREF_AUDIT.md  AeronTensorPool_Data_Product_Service_spec_draft_v_0.md  AeronTensorPool_Data_Recorder_spec_draft_v_0.md  BENCHMARK_BASELINE.md  BRIDGE_IMPLEMENTATION_PHASES.md  CLIENT_API_MIGRATION.md  CLIENT_API_PROPOSAL.md  CLIENT_QUICKSTART.md  CLIENT_RUNTIME_INTERFACE.md  CONFIG_MATRIX_TESTS.md  CONFIG_REFERENCE.md  C_API_AERON_STYLE_REFACTOR_PLAN.md  C_CLIENT_API_PLAN.md  C_CLIENT_CONFORMANCE_MATRIX.md  DRIVER_HSM_MAPPING.md  DRIVER_HSM_MIDDLE_GROUND.md  DRIVER_HSM_PER_LEASE_PLAN.md  DRIVER_HSM_SKETCH.md  DRIVER_SPEC_UPDATE_PLAN.md  EPOCH_GC_POLICY.md  EXAMPLE_Camera_Pipeline.md  HDR_HISTOGRAM_TELEMETRY.md  ICEORYX_ADAPTABLE_FEATURES.md  ICEORYX_COMPARISON.md  ICEORYX_DETAILED_COMPARISON.md  IMPLEMENTATION.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PHASES.md  IMPLEMENTATION_PHASES_AGENT_SPLIT.md  IMPLEMENTATION_PHASES_DISCOVERY_SERVICE.md  IMPLEMENTATION_PHASES_HSM_MIDDLE_GROUND.md  IMPLEMENTATION_PHASES_HSM_PER_LEASE.md  IMPLEMENTATION_PHASES_HSM_PER_STREAM.md  IMPLEMENTATION_PLAN_BRIDGE_TRACEID_V1_1.md  IMPLEMENTATION_PLAN_COMPLIANCE_SWEEP_2026-01.md  IMPLEMENTATION_PLAN_DATA_RECORDER.md  (+57 more)
docs/archive/: AERON_CALLBACKS_ASYNC_REVIEW.md  AGENTS_MODULE_PROPOSAL.md  API_ERGONOMICS.md  API_EXPORTS.md  BRIDGE_IMPLEMENTATION_PHASES.md  CLIENT_API_PROPOSAL.md  DRIVER_HSM_MAPPING.md  DRIVER_HSM_SKETCH.md  IMPLEMENTATION_PHASES.md  IMPLEMENTATION_PHASES_AGENT_SPLIT.md  IMPLEMENTATION_PHASES_DISCOVERY_SERVICE.md  IMPLEMENTATION_PHASES_HSM_MIDDLE_GROUND.md  IMPLEMENTATION_PLAN_SPEC_COMPLETION.md  IMPLEMENTATION_PLAN_WIRE_SPEC_UPDATE.md  IMPLEMENTATION_REVIEW.md  ISSUES.md  QOS_MONITOR_PLAN.md  REFACTOR_PLAN.md  REFACTOR_PLAN_AGENT_LOGIC_SPLIT.md  REFACTOR_PLAN_API.md  REFACTOR_PLAN_MODULES.md  REFACTOR_TRACKER.md
docs/examples/: bridge_config_example.toml  (+7 more)
schemas/: bridge-schema.xml  driver-schema.xml  sbe-schema.xml  wire-schema.xml
scripts/: README.md  aeron_tap.jl  check_spec_lock.jl  example_consumer.jl  example_detach.jl  example_discovery.jl  example_driver.jl  example_invoker.jl  example_join_barrier_latest.jl  example_join_barrier_sequence.jl  example_join_barrier_timestamp.jl  example_producer.jl  example_progress_consumer.jl  example_qos_monitor.jl  example_rate_limited_consumer.jl  example_reattach.jl  inspect_shm_layout.jl  interop_decode_message.jl  interop_env.sh  interop_print_driver_config.jl  interop_print_endpoints.sh  run_all.sh  run_all_driver.sh  run_benchmarks.jl  run_bridge.jl  run_bridge_chain.jl  run_c_integration_smoke.sh  run_c_integration_tests.sh  run_driver.jl  run_driver_smoke.jl  run_examples.sh  run_examples_per_consumer.sh  run_interop_all.sh  run_interop_crosscheck.sh  run_media_driver.jl  run_rate_limiter.jl  run_role.jl  run_system_smoke.jl  run_tests.jl  run_tests.sh  (+2 more)
src/: AeronTensorPool.jl  TpDriverApp.jl  TpToolApp.jl  aeron_utils.jl  agent_common.jl  agent_glue.jl  bridge.jl  config_loader.jl  constants.jl  consumer.jl  consumer_agent.jl  counters.jl  decimator.jl  errors.jl  polled_timer.jl  producer.jl  producer_agent.jl  shm.jl  supervisor.jl  supervisor_agent.jl
src/apps/: Apps.jl  (+2 more)
test/: helpers_aeron.jl  helpers_external.jl  runtests.jl  test_aeron_integration.jl  test_allocations.jl  test_allocations_bridge.jl  test_allocations_claim_path.jl  test_allocations_driver_control.jl  test_allocations_driver_poller.jl  test_allocations_join_barrier.jl  test_allocations_load.jl  test_allocations_loop.jl  test_allocations_qos_monitor.jl  test_allocations_seqlock.jl  test_allocations_shm_uri.jl  test_allocations_tracelink.jl  test_aqua.jl  test_attach_backoff.jl  test_attach_burst.jl  test_attach_retry.jl  test_bridge_assembly_timeout.jl  test_bridge_backpressure.jl  test_bridge_chunk_fuzz.jl  test_bridge_chunk_validation.jl  test_bridge_config_validation.jl  test_bridge_discovery_integration.jl  test_bridge_header_validation.jl  test_bridge_integration.jl  test_bridge_integrity.jl  test_bridge_max_payload_bytes.jl  test_bridge_progress_mapping.jl  test_bridge_publish_ordering.jl  test_bridge_qos_forwarding.jl  test_bridge_tracelink_chunks.jl  test_callbacks_metadata_qos.jl  test_cli_tool.jl  test_client_api.jl  test_client_id_auto_assign.jl  test_client_interface_contract.jl  test_config_defaults.jl  (+116 more)
(+238 files in other folders)
